[package]
name = "litemap"
version = "0.1.0"
edition = "2024"

[dependencies]
ph = {version = "0.10.0", features = ["gxhash", "sux"] }
smallvec = "1.15.1"
addr = "0.15.6"
anyhow = "1.0.100"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
bumpalo = "3.19.1"







[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3", "const_xxh3"]
